update: 更新侧边栏

--- a/docs/post/15.md
+++ b/docs/post/15.md
@@ -2,7 +2,11 @@
 title: '在windows下使用WSL中的git'
 date: 2022-03-07 17:36:53
 tags: []
+next:
+  text: '使用miniconda管理python版本'
+  link: '/post/14'
 ---
+
 # {{ $frontmatter.title }}
 
 11
