--- a/docs/post/19.md
+++ b/docs/post/19.md
@@ -2,6 +2,9 @@
 title: 页面加载优化
 date: 2022-09-01
 tags: [Vue.js]
+next:
+  text: 'NAS折腾（二）内网穿透'
+  link: '/post/18'
 ---
 
 # {{ $frontmatter.title }}
