--- a/docs/post/16.md
+++ b/docs/post/16.md
@@ -2,19 +2,26 @@
 title: '威联通(Qnap)安装Mariadb'
 date: 2022-03-08 08:54:39
 tags: []
+next:
+  text: '在windows下使用WSL中的git'
+  link: '/post/15'
 ---
+
 # {{ $frontmatter.title }}
 
 以前开发的时候总是用同一台机器开启数据库,机器休眠或者关闭之后数据库就不能链接了,
+
 <!-- more -->
-想着有没有办法可以在本地环境中跑一个永不关机的数据库进程,正好手头有一台之前买的威联通的NAS,是不是可以在NAS上安装一个数据库,这样就不用担心关机关闭的问题了.以下是自己记下的操作步骤,希望有需要的可以参考一下
-1. 应用商店安装mariadb
-2. 开启威廉通ssh
-3. Ssh登陆威廉通 用户admin 密码就是网页版登陆威廉通的密码
-4. 修改mariadb配置 /etc/config/my.cnf sock链接的地址改为安装好mariadb后弹框中的地址
-5. 开启mariadb远程访问
+
+想着有没有办法可以在本地环境中跑一个永不关机的数据库进程,正好手头有一台之前买的威联通的 NAS,是不是可以在 NAS 上安装一个数据库,这样就不用担心关机关闭的问题了.以下是自己记下的操作步骤,希望有需要的可以参考一下
+
+1. 应用商店安装 mariadb
+2. 开启威廉通 ssh
+3. Ssh 登陆威廉通 用户 admin 密码就是网页版登陆威廉通的密码
+4. 修改 mariadb 配置 /etc/config/my.cnf sock 链接的地址改为安装好 mariadb 后弹框中的地址
+5. 开启 mariadb 远程访问
 6. /share/CACHEDEV1_DATA/.qpkg/MariaDB1/bin 目录下执行 ./mysql -u root -p
-7. GRANT ALL PRIVILEGES ON *.* TO 'root'@'%'IDENTIFIED BY '123456' WITH GRANT OPTION; 也可以只允许部分地址链接192.168.111.%
-8.  flush privileges; 刷新使上面的修改生效
+7. GRANT ALL PRIVILEGES ON _._ TO 'root'@'%'IDENTIFIED BY '123456' WITH GRANT OPTION; 也可以只允许部分地址链接 192.168.111.%
+8. flush privileges; 刷新使上面的修改生效
 9. Laravel :Syntax error or access violation: 1071 Specified key was too long;
-10. 在AppServiceProvider中添加 Schema::defaultStringLength(191);
+10. 在 AppServiceProvider 中添加 Schema::defaultStringLength(191);
