--- a/docs/post/17.md
+++ b/docs/post/17.md
@@ -2,17 +2,20 @@
 title: 在VSCode中使用Neovim
 date: 2022-8-11
 tags: [Vim, VSCode]
+next:
+  text: '威联通(Qnap)安装Mariadb'
+  link: '/post/16'
 ---
 
 # {{ $frontmatter.title }}
 
-在VSCode中配置NeoVim是参考的Youtube上的一个视频，那段视频也配有博客，后来，博客作者开发了lunarvim，那篇博客也被删除了，视频和代码还在，现在自己记录一下配置过程
+在 VSCode 中配置 NeoVim 是参考的 Youtube 上的一个视频，那段视频也配有博客，后来，博客作者开发了 lunarvim，那篇博客也被删除了，视频和代码还在，现在自己记录一下配置过程
 
-## VSCode配置
+## VSCode 配置
 
 ### 插件
 
 VSCode Neovim
 Which Key
 
-## Neovim配置
+## Neovim 配置
