--- a/docs/post/18.md
+++ b/docs/post/18.md
@@ -1,6 +1,9 @@
 ---
 title: NAS折腾（二）内网穿透
 date: 2022-08-15
+next:
+  text: '在VSCode中使用Neovim'
+  link: '/post/17'
 ---
 
 # {{ $frontmatter.title }}
