--- a/docs/post/2022-03-08.md
+++ b/docs/post/2022-03-08.md
@@ -4,7 +4,7 @@ date: 2022-03-08 08:54:39
 tags: []
 next:
   text: '在windows下使用WSL中的git'
-  link: '/post/15'
+  link: '/post/2022-08-11'
 ---
 
 # {{ $frontmatter.title }}
