--- a/docs/post/2022-09-01.md
+++ b/docs/post/2022-09-01.md
@@ -4,7 +4,7 @@ date: 2022-09-01
 tags: [Vue.js]
 next:
   text: 'NAS折腾（二）内网穿透'
-  link: '/post/18'
+  link: '/post/2023-03-16'
 ---
 
 # {{ $frontmatter.title }}
