--- a/docs/post/2022-03-08.md
+++ b/docs/post/2022-03-08.md
@@ -1,10 +1,7 @@
 ---
 title: '威联通(Qnap)安装Mariadb'
 date: 2022-03-08 08:54:39
-tags: []
-next:
-  text: '在windows下使用WSL中的git'
-  link: '/post/2022-08-11'
+tags: [硬件]
 ---
 
 # {{ $frontmatter.title }}
