--- a/docs/post/2022-08-15.md
+++ b/docs/post/2022-08-15.md
@@ -1,9 +1,7 @@
 ---
 title: NAS折腾（二）内网穿透
 date: 2022-08-15
-next:
-  text: '在VSCode中使用Neovim'
-  link: '/post/17'
+tags: [硬件]
 ---
 
 # {{ $frontmatter.title }}
