--- a/docs/post/2023-03-16.md
+++ b/docs/post/2023-03-16.md
@@ -27,7 +27,7 @@ tags: [工具]
 | SumatraPDF       | 轻量 pdf 阅读器          |
 | Notepad2-mod     | nodepad 的替代           |
 
-### Chrome 插件
+## Chrome 插件
 
 Chrome 已经变成事实意义上的浏览器标准了。服务端也有源自 ChromeV8 的 Node.js，客户端还有 Electron。
 
